<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_read_line">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/read_main_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@color/white"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="50dp"
               android:textSize="16sp"
               android:gravity="center_vertical"
               android:text="@string/read_time_current_status"/>
           <TextView
               android:id="@+id/tvStatus"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_marginLeft="16dp"
               android:textSize="16sp"
               android:gravity="center_vertical"
               android:text="@string/read_relay_open"
               android:textColor="@color/color_relay_close"/>
           <ImageView
               android:id="@+id/imgReload"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:src="@mipmap/img_relay_reload"/>
       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_read_line"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"></LinearLayout>
        <ImageView
            android:id="@+id/imgStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/img_relay_open"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tvOpen"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/read_relay_open"
        android:background="@drawable/btn_blue"/>
    <TextView
        android:id="@+id/tvClose"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/read_main_color"
        android:text="@string/read_relay_close"
        android:background="@drawable/tv_blue_border"/>

</LinearLayout>