<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_read_line">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/read_main_color" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_border"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/color_read_999999"
                android:text="@string/gps_latitude"/>
            <EditText
                android:id="@+id/edit1"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:enabled="false" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_border"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/color_read_999999"
                android:text="@string/gps_longitude"/>
            <EditText
                android:id="@+id/edit2"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:enabled="false"
                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tvRead"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/read_read"
        android:background="@drawable/btn_blue"/>
</LinearLayout>