<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_read_line">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/read_main_color" />
    <LinearLayout
        android:id="@+id/layEdit2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item_border"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                android:text="@string/read_ctpt_ip"
                android:textColor="@color/colorMain"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etip1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="." />

            <EditText
                android:id="@+id/etip2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="." />

            <EditText
                android:id="@+id/etip3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="." />

            <EditText
                android:id="@+id/etip4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:background="@color/colorMain" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_border"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/color_read_999999"
                android:text="@string/read_ctpt_port"/>
            <EditText
                android:id="@+id/edit2"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_border"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/color_read_999999"
                android:text="@string/read_ctpt_backup_ip"/>
            <EditText
                android:id="@+id/edit3"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:text="1000"
                android:textColor="@color/black"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:background="@drawable/item_border"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/color_read_999999"
                android:text="@string/read_ctpt_backup_port"/>
            <EditText
                android:id="@+id/edit4"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:text="1000"
                android:textColor="@color/black"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_border"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/color_read_999999"
                android:text="@string/read_ctpt_apn"/>
            <EditText
                android:id="@+id/edit5"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tvRead"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/read_read"
        android:background="@drawable/btn_blue"/>
    <TextView
        android:id="@+id/tvSet"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/read_main_color"
        android:text="@string/read_set"
        android:background="@drawable/tv_blue_border"/>

</LinearLayout>
